--- a/src/scss/custom/_section_internal_banner.scss
+++ b/src/scss/custom/_section_internal_banner.scss
@@ -29,6 +29,13 @@
                 margin-left: 5px;
                 margin-right: 30px;
             }
+
+            a {
+                text-decoration: none;
+                font-weight: 500;
+                font-size: 17px;
+                color: #fff;
+            }
         }
     }
 }
