--- a/src/scss/custom/_section_home_economic_indicators.scss
+++ b/src/scss/custom/_section_home_economic_indicators.scss
@@ -8,36 +8,23 @@
         color: #bd0a13;
     }
 
-    ul {
-        margin: 0px;
-        list-style: none;
-        padding-left: 0px;
+    .owl-carousel {
+        margin-bottom: 15px;
 
-        li {
-            float: left;
-            margin: 0px 20px 15px 0px;
-            font-weight: 700;
-            font-size: 17px;
-            color: #bd0a13;
-
-            span {
-                font-weight: 400;
+        .item {
+    
+            p {
+                margin: 0px;
+                padding: 0px;
+                font-weight: 700;
                 font-size: 17px;
                 color: #bd0a13;
-            }
-        }
-    }
-}
-
-@include media-breakpoint-down(sm) {
-
-    .section_home_economic_indicators {
-
-        ul {
-
-            li {
-                width: 100%;
-                margin: 0px 0px 15px 0px;
+        
+                span {
+                    font-weight: 400;
+                    font-size: 17px;
+                    color: #bd0a13;
+                }
             }
         }
     }
