--- a/src/scss/custom/_footer.scss
+++ b/src/scss/custom/_footer.scss
@@ -66,7 +66,7 @@ footer {
             }
         }
 
-        .wpcf7 {
+        /*.wpcf7 {
 
             .screen-reader-response,
             .wpcf7-response-output {
@@ -84,8 +84,7 @@ footer {
                     display: block;
                 }
             }
-        }
-            
+        }*/
 
         iframe {
             width: 100%;
