--- a/src/scss/custom/_section_contact.scss
+++ b/src/scss/custom/_section_contact.scss
@@ -121,7 +121,7 @@
                 }
             }
 
-            .wpcf7 {
+            /*.wpcf7 {
 
                 .screen-reader-response,
                 .wpcf7-response-output {
@@ -139,7 +139,7 @@
                         display: block;
                     }
                 }
-            }
+            }*/
         }
     }
 }
