--- a/src/scss/custom/_section_home_calendar.scss
+++ b/src/scss/custom/_section_home_calendar.scss
@@ -131,6 +131,16 @@
                 .fa {
                     color: #fff;
                 }
+
+                &:hover {
+                    color: #464646;
+                    border: 3px solid #fff;
+                    background-color: #fff;
+
+                    .fa {
+                        color: #464646;
+                    }
+                }
             }
             
             &.btn-secondary {
@@ -139,6 +149,16 @@
 
                 .fa {
                     color: #464646;
+                }
+
+                &:hover {
+                    color: #fff;
+                    border: 3px solid #bd0a13;
+                    background-color: #bd0a13;
+
+                    .fa {
+                        color: #fff;
+                    }
                 }
             }
         }
@@ -165,6 +185,16 @@
         .fa {
             margin-right: 15px;
             font-size: 30px;
+        }
+
+        &:hover {
+            color: #464646;
+            border: 3px solid #fff;
+            background-color: #fff;
+
+            .fa {
+                color: #464646;
+            }
         }
     }
 }
