--- a/src/scss/custom/_section_landing_our_app.scss
+++ b/src/scss/custom/_section_landing_our_app.scss
@@ -11,6 +11,7 @@
         font-size: 60px;
         color: #bd0a13;
     }
+
     .content-img {
         width: 100%;
         height: 250px;
@@ -33,7 +34,7 @@
             font-weight: 700;
             font-size: 20px;
             color: #fff;
-            background: transparent url('../img/bg-red-opacity-70.png') left top repeat;
+            background-color: rgba(189,10,19,0.8);
         }
     }
 
