--- a/src/scss/custom/_section_landing_feature.scss
+++ b/src/scss/custom/_section_landing_feature.scss
@@ -86,7 +86,7 @@
         .owl-carousel-landing-feature {
             height: auto;
             padding: 0px;
-            background: transparent;
+            background: transparent !important;
 
             .item {
 
