--- a/src/scss/custom/_section_landing_description.scss
+++ b/src/scss/custom/_section_landing_description.scss
@@ -101,6 +101,12 @@
             }
         }
     }
+
+    .container-custom {
+        width: 100%;
+        max-width: 800px;
+        margin: 0px auto;
+    }
 }
 
 @include media-breakpoint-down(md) {
